[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["mkpl"]

[project]
name = "make_playlist"
version = "1.18.1"
readme = "README.md"
keywords = ["playlist", "multimedia", "file", "maker", "make", "m3u", "m3u8"]

authors = [{ name = "Matteo Guadrini", email = "matteo.guadrini@hotmail.it" }]
maintainers = [
    { name = "Matteo Guadrini", email = "matteo.guadrini@hotmail.it" },
]

description = "Make M3U format playlist from command line."
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = ["mutagen==1.47.0", "tempcache==0.0.11"]

[project.scripts]
mkpl = "mkpl:main"
make_playlist = "mkpl:main"

[project.urls]
homepage = "https://github.com/MatteoGuadrini/mkpl"
documentation = "https://matteoguadrini.github.io/mkpl/"
changelog = "https://github.com/MatteoGuadrini/mkpl/blob/master/CHANGES.md"
